modificamos el media query

--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,13 @@ Body{
     background-color: #606c38;
 }
 
-nav{
+/*nav{
     padding: 40px 20px;
+}*/
+
+.top{
+    display: flex;
+    justify-content: space-between;
 }
    
 
@@ -26,10 +31,11 @@ nav{
     font-weight: 600;
     list-style: none;
     display: flex;
-    float: right;
-    gap: 40px;
-    padding: 10px;
-    justify-content: space-between;
+    align-items: end;
+    padding-top: 40px;
+    padding-right: 20px;
+    
+
 }
 
 .nav-ul a{
@@ -37,13 +43,16 @@ nav{
     text-decoration: none;
     color: #C5EBAA;
     font-size: 18px;
-    padding: 10px;
+    padding: 15px;
     
 }
 
 .logo{
     width: 200px;
     height: auto;
+    padding-top: 20px;
+    padding-left: 20px;
+  
 }
 
 .portada{
@@ -51,8 +60,17 @@ nav{
     /*background-image: url("/imagenes/ale-romo-CLiwQXx7kT8-unsplash.jpg");*/
 }
 
+.abrir-menu, .cerrar-menu{
+   
+    color: #fff;
+    border: none;
+    font-size: 30px;
+    display: none; 
+    
+}
+
 header{
-    padding-top: 90px;
+    padding-top: 100px;
     padding-left: 45px;
     color: #fff;
 }
@@ -69,59 +87,79 @@ header{
     color: #C5EBAA;
 }
 
+.p1, .p2{
+    width: 700px;
+}
+
 h1{
     font-family: "Vollkorn", serif;
     font-weight: 400;
+    color: #fff;
+    font-size: 35px;
+    padding: 30px;
     text-align: center;
-    padding: 10px;
-    color: #283618;
-    font-size: 45px;
 }
 
 .tratamientos{
-    padding-top: 50px;
     padding: 50px;
     height: 100vh;
-  
 }
+   
 
 .tratamientos1{
     display: grid;
     grid-template-columns: 250px 250px 250px;
-    grid-template-rows: 150px 50px;
+    grid-template-rows: 167px;
     column-gap: 60px;
-    row-gap: 5px;
     width: 100%;
     justify-content: center;
-   
+  
 }
 
 .tratamientos2{
     display: grid;
     grid-template-columns: 250px 250px;
-    grid-template-rows: 150px 50px;
+    grid-template-rows: 167px;
     column-gap: 60px;
-    row-gap: 5px;
     width: 100%;
-    padding-top: 30px;
-    padding-bottom: 30px;
     justify-content: center;
-    
+    padding-top: 60px;
+
 }
 
-.texto{
-    background-color: #FFD0D0;
-    color: #283618;
+.tratamientos h2{
     font-size: 25px;
-    font-weight: 600;
+    color: #fff;
     text-align: center;
-    padding-top: 8px;
+    line-height: 150px;
+}
+
+
+
+.item1{
+    background-image: url("/imagenes/sauna.png");
+}
+
+.item2{
+    background-image: url("/imagenes/faciales.png");
+}
+
+.item3{
+    background-image: url("/imagenes/masajes.png");
+}
+
+.item4{
+    background-image: url("/imagenes/hidromasaje.png");
+}
+
+.item5{
+    background-image: url("/imagenes/aromaterapia.png");
+}
+
+.items{
     border-radius: 10px;
 }
 
-.img2{
-    border-radius: 10px;
-}
 
 .reserva{
     font-style: italic;
@@ -129,6 +167,320 @@ h1{
     color:#283618;
     cursor: pointer;
 }
+
+.circuitos{
+    display: grid;
+    grid-template-columns: 500px 500px;
+    /*grid-template-rows: 500px; */
+    column-gap: 100px;
+    justify-content: center;
+    height: 100vh;
+    padding-top: 50px;
+    padding-bottom: 50px;
+   
+}
+
+.circuito{
+    font-size: 20px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    padding-top: 30px;
+    
+}
+
+.packs{
+    list-style: none;
+    line-height: 2;
+    padding-top: 10px;
+    color:#fff;
+}
+
+h3{
+    font-size: 25px;
+    color:#283618;
+}
+
+.cuotas{
+    margin-top: 25px;
+    color: #283618;
+    font-weight: bold;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 10px;
+
+}
+
+.cuota2{
+    margin-top: 64px;
+}
+
+.contacto2{
+    height: 100vh;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.datos-contacto{
+    background-color: #fff;
+    width: 400px;
+    height: 500px;
+    border-radius: 10px;
+    
+}
+
+.espacio{
+    background-color: #283618;
+    width: 100px;
+    height: 332px;
+
+}
+
+h4{
+    font-size: 25px;
+    padding-top: 50px;
+    color: #283618;
+}
+
+h5{
+    font-size: 23px; 
+    margin-block-start: 25px;
+    color:#283618;
+}
+
+.contacto2 p{
+    font-size: 21px;
+    color:#283618;
+    padding-top: 7px;
+}
+
+.icono{
+    color: #fff;
+    background-color: #283618;
+    padding: 8px;
+    border-radius: 50%;
+
+}
+
+@media screen and (min-width: 290px) and (max-width: 480px){
+
+    .nav {
+        opacity: 0;
+        visibility: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 1rem;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #283618;
+        padding: 2rem;
+        box-shadow: 0 0 0 100vmax(0, 0, 0, .5);
+        
+    }
+
+    .abrir-menu{
+        display: block;
+        background-color: #606c38;
+        color: #C5EBAA;
+        cursor: pointer;
+    }
+    
+    .cerrar-menu{
+        display: block;
+        background-color: #283618;
+        cursor: pointer;
+        color: #C5EBAA;
+    }
+
+
+    .nav-ul{
+        padding-right: 0;
+        padding-top: 20px;
+        gap: 10px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    
+    .nav.visible{
+        opacity: 1;
+        visibility: visible;
+    }
+    
+
+    .portada{
+       max-width: 100%;
+       display: block;
+       overflow: hidden;
+       align-items: center;
+       text-align: center;
+       justify-content: center;
+    }
+
+    
+    header{
+        max-width: 100%;
+        display: block;
+        padding-left: 0;
+        padding-top: 300px;
+        align-items: center;
+        text-align: center;
+        overflow: hidden;
+    }
+
+    .p1{
+        font-family: "Vollkorn", serif;
+        font-size: 30px;
+    }
+    
+    .p2{
+        font-size: 20px;
+        padding-top: 15px;
+        color: #C5EBAA;
+    }
+
+    .p1, .p2{
+        max-width: 100%;
+        display: block;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .logo{
+    width: 100px;
+    height: auto;
+    padding-top: 8px;
+    padding-left: 8px;
+  
+    }
+
+    h1{
+        font-size: 25px;
+        padding-bottom: 30px;
+        text-align: center;
+    }
+    
+    .tratamientos{
+        padding: 10px;
+        overflow: hidden;
+        height: auto;
+    }
+
+    .tratamientos1{
+        grid-template-columns: 250px;
+        grid-template-rows: 167px 167px 167px;
+        justify-content: center;
+        row-gap: 20px;
+    }
+    
+    .tratamientos2{
+        grid-template-columns: 250px;
+        grid-template-rows: 167px 167px;
+        row-gap: 20px;
+        justify-content: center;
+        padding-top: 20px;
+    }
+
+    .circuitos{
+        display: grid;
+        grid-template-columns: 250px;
+        grid-template-rows: auto auto;
+        row-gap: 50px;
+        justify-content: center;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        height: auto;
+       
+    }
+    
+    .circuito{
+        font-size: 15px;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        padding-top: 30px;
+    }
+
+    .cuota2{
+        margin-top: 25px;
+    }
+    
+    .packs{
+        list-style: none;
+        line-height: 2;
+        padding-top: 10px;
+        color:#fff;
+    }
+
+    .contacto2{
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .datos-contacto{
+        background-color: #fff;
+        width: 150px;
+        height: auto;
+        border-radius: 10px;
+        
+    }
+    
+    .espacio{
+        background-color: #283618;
+        width: 50px;
+        height: 150px;
+    }
+
+
+    .circuitos, .contacto2{
+        overflow: hidden;
+    }
+
+    h4{
+        font-size: 15px;
+        padding-top: 25px;
+
+    }
+
+    
+    h5{
+        font-size: 14px; 
+        margin-block-start: 12px;
+        
+    }
+    
+    .contacto2 p{
+        font-size: 13px;
+        padding-top: 3px;
+    }
+    
+    .icono{
+       
+        border-radius: 50%;
+        padding: 4px;
+
+    }
+
+    .map{
+        width: 100%;
+        height: auto;
+    }
+ 
+}
+
+
+
+
+
 
 
 
